eks-d/rundeck_deployment.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: rundeck
  labels: 
    name: rundeck
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rundeck
  namespace: rundeck
  labels:
    app: rundeck
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rundeck
  template:
    metadata:
      labels:
        app: rundeck
    spec:
      containers:
      - image: rundeck/rundeck:3.4.5
        name: rundeck
        resources:
          requests:
            memory: "1024Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 4440
---
apiVersion: v1
kind: Service
metadata:
  name: rundeck
  namespace: rundeck
  labels:
    name: rundeck
spec:
  type: NodePort
  selector:
    app: rundeck
  ports:
    - protocol: TCP
      port: 4440
      targetPort: 4440
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: rundeck
  namespace: rundeck
spec:
  rules:
    - host: rundeck.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: rundeck
              servicePort: 4440
